--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,11 @@
     "firebase": "^8.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.3",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
